<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.plagesribeiro.pucantina.ui.Menu"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_carrinho"
        android:name="com.plagesribeiro.pucantina.ui.Carrinho"
        android:label="@string/title_carrinho"
        tools:layout="@layout/fragment_carrinho" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.plagesribeiro.pucantina.ui.Perfil"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />

</navigation>
