<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cadastrar_produto">

    <fragment
        android:id="@+id/navigation_cadastrar_produto"
        android:name="com.plagesribeiro.pucantina.ui.Menu"
        android:label="@string/title_cadastrar_produto"
        tools:layout="@layout/fragment_cadastro_produto" />

    <fragment
        android:id="@+id/navigation_pedidos"
        android:name="com.plagesribeiro.pucantina.ui.Carrinho"
        android:label="@string/title_pedidos"
        tools:layout="@layout/fragment_pedido" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.plagesribeiro.pucantina.ui.Perfil"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />

</navigation>
